--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zenwattage/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^7.0.0",
+    "node-spotify-api": "^1.1.1",
     "spotify": "^0.3.0"
   }
 }
