--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/zenwattage/liri-node-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "node-spotify-api": "^1.1.1",
     "spotify": "^0.3.0"
