--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^7.0.0",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1",
     "spotify": "^0.3.0"
   }
