--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zenwattage/liri-node-app#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "colors": "^1.3.3",
     "dotenv": "^7.0.0",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1",
